gccida/g0/reg_is_born
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reg_is_born/src/local-alloc.c:2569:21: error: use of undeclared identifier 'machine_mode'
alloc_qty( regno, ( machine_mode)*( ( unsigned __int8 *)reg + 2), v3 / v4, birth); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reg_is_born/src/local-alloc.c:2572:1: error: use of undeclared identifier 'qty_0'
qty_0[*( ( int *)reg_qty + regno)].death = -1; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reg_is_born/src/local-alloc.c:2576:21: error: use of undeclared identifier 'machine_mode'
mark_life( regno, ( machine_mode)*( ( unsigned __int8 *)reg + 2), 1); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reg_is_born/src/local-alloc.c:2578:26: error: use of undeclared identifier 'machine_mode'
post_mark_life( regno, ( machine_mode)*( ( unsigned __int8 *)reg + 2), 1, birth, 2 * this_insn_number); 
                         ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reg_is_born/src/obj/local-alloc.o] Error 1
